feat: add comprehensive documentation including README, CONTRIBUTING, CHANGELOG, and LICENSE

--- a/manifest.json
+++ b/manifest.json
@@ -28,7 +28,11 @@
       "purpose": "any maskable"
     }
   ],
-  "categories": ["utilities", "productivity", "tools"],
+  "categories": [
+    "utilities",
+    "productivity",
+    "tools"
+  ],
   "screenshots": [],
   "share_target": {
     "action": "/",
