feat: simplify title and name in index.html and manifest.json for consistency

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 ﻿{
-  "name": "ابزارهای وب - Web Tools",
+  "name": "Web Tools",
   "short_name": "ابزارهای وب",
   "description": "مجموعه ابزارهای آنلاین ساخته شده با هوش مصنوعی",
   "start_url": "/",
